--- a/DynamicDriving.AzureServiceBus.Sender.TestHarness/DynamicDriving.AzureServiceBus.Sender.TestHarness.csproj
+++ b/DynamicDriving.AzureServiceBus.Sender.TestHarness/DynamicDriving.AzureServiceBus.Sender.TestHarness.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>67d04f0d-fcde-446c-90b0-8de540b8642c</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BuildingBlocks\DynamicDriving.AzureServiceBus\DynamicDriving.AzureServiceBus.csproj" />
