--- a/Contracts/DynamicDriving.Events/DynamicDriving.Events.csproj
+++ b/Contracts/DynamicDriving.Events/DynamicDriving.Events.csproj
@@ -7,4 +7,8 @@
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Protos\" />
+  </ItemGroup>
+
 </Project>
