--- a/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
+++ b/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <Folder Include="DomainDriven\" />
   </ItemGroup>
 
   <ItemGroup>
