add domain services

--- a/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
+++ b/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Folder Include="DomainDriven\" />
+    <Folder Include="Envelopes\" />
+    <Folder Include="Results\" />
   </ItemGroup>
 
   <ItemGroup>
