--- a/Services/Trips/DynamicDriving.TripManagement.DomainServices/DynamicDriving.TripManagement.DomainServices.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.DomainServices/DynamicDriving.TripManagement.DomainServices.csproj
@@ -4,16 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="TripsAggregate\Services\" />
-    <Folder Include="UsersAggregate\" />
+    <Folder Include="Trips\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+    <ProjectReference Include="..\DynamicDriving.TripManagement.Domain\DynamicDriving.TripManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
