--- a/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
+++ b/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <Folder Include="DomainDriven\" />
     <Folder Include="Envelopes\" />
+    <Folder Include="Mediator\" />
+    <Folder Include="ResultModels\" />
     <Folder Include="Results\" />
   </ItemGroup>
 
