--- a/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Models\DynamicDriving.Models.csproj" />
     <ProjectReference Include="..\DynamicDriving.TripManagement.Application\DynamicDriving.TripManagement.Application.csproj" />
     <ProjectReference Include="..\DynamicDriving.TripManagement.Infraestructure\DynamicDriving.TripManagement.Infraestructure.csproj" />
   </ItemGroup>
