--- a/Services/Trips/DynamicDriving.TripManagement.API.Tests/DynamicDriving.TripManagement.API.Tests.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.API.Tests/DynamicDriving.TripManagement.API.Tests.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -18,6 +22,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Trips\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Models\DynamicDriving.Models.csproj" />
+    <ProjectReference Include="..\DynamicDriving.TripManagement.API\DynamicDriving.TripManagement.API.csproj" />
   </ItemGroup>
 
 </Project>
