--- a/Services/Trips/DynamicDriving.TripManagement.Domain.Tests/DynamicDriving.TripManagement.Domain.Tests.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Domain.Tests/DynamicDriving.TripManagement.Domain.Tests.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
