--- a/Services/Trips/DynamicDriving.TripManagement.Infraestructure/DynamicDriving.TripManagement.Infraestructure.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Infraestructure/DynamicDriving.TripManagement.Infraestructure.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\DynamicDriving.TripManagement.Domain\DynamicDriving.TripManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+  </ItemGroup>
+
 </Project>
