--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -2,7 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
+  },
+  "ConnectionStrings": {
+      "DefaultConnection": "server=(localdb)\\mssqllocaldb;Initial Catalog=DynamicDriving.TripManagementDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
