--- a/Services/Trips/DynamicDriving.TripManagement.Infrastructure/DynamicDriving.TripManagement.Infrastructure.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Infrastructure/DynamicDriving.TripManagement.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Agents\" />
+  </ItemGroup>
+
 </Project>
