--- a/BuildingBlocks/DynamicDriving.BuildingBlocks.Tests/DynamicDriving.BuildingBlocks.Tests.csproj
+++ b/BuildingBlocks/DynamicDriving.BuildingBlocks.Tests/DynamicDriving.BuildingBlocks.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DynamicDriving.AzureServiceBus\DynamicDriving.AzureServiceBus.csproj" />
+    <ProjectReference Include="..\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
