--- a/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Support\" />
+    <Folder Include="UseCases\Trips\GetTrip\" />
   </ItemGroup>
 
 </Project>
