--- a/Services/Trips/DynamicDriving.TripManagement.Domain/DynamicDriving.TripManagement.Domain.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Domain/DynamicDriving.TripManagement.Domain.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TripsAggregate\Queries\" />
+  </ItemGroup>
+
 </Project>
