--- a/Services/Trips/DynamicDriving.TripManagement.Infrastructure/DynamicDriving.TripManagement.Infrastructure.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Infrastructure/DynamicDriving.TripManagement.Infrastructure.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
+    <Folder Include="Persistence\Configuration\" />
   </ItemGroup>
 
 </Project>
