--- a/Services/Trips/DynamicDriving.TripManagement.Domain/DynamicDriving.TripManagement.Domain.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Domain/DynamicDriving.TripManagement.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CitiesAggregate\Services\" />
     <Folder Include="TripsAggregate\Queries\" />
   </ItemGroup>
 
