--- a/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.API/DynamicDriving.TripManagement.API.csproj
@@ -28,7 +28,8 @@
 
   <ItemGroup>
     <Folder Include="Support\" />
-    <Folder Include="UseCases\Trips\GetTrip\" />
+    <Folder Include="UseCases\Trips\GetById\" />
+    <Folder Include="UseCases\Trips\Confirm\" />
   </ItemGroup>
 
 </Project>
