TripConfirmed Domain event

--- a/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
@@ -20,6 +20,7 @@
     <Folder Include="Cities\" />
     <Folder Include="Outbox\" />
     <Folder Include="Trips\Commands\" />
+    <Folder Include="Trips\Events\" />
   </ItemGroup>
 
 </Project>
