--- a/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5bb7d4d3-ccd3-478b-960a-56fe01d313b2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.AzureServiceBus\DynamicDriving.AzureServiceBus.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+    <ProjectReference Include="..\DynamicDriving.DriverManagement.Core\DynamicDriving.DriverManagement.Core.csproj" />
+    <ProjectReference Include="..\DynamicDriving.DriverManagement.Infrastructure\DynamicDriving.DriverManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
