--- a/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "MongoOptions": {
+    "Client": "mongodb://localhost:27017",
+    "Database":  "DriverManagementDB"
+  } 
 }
