refactor records to classes in domain model

--- a/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\DynamicDriving.DriverManagement.Infrastructure\DynamicDriving.DriverManagement.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\Drivers\Edit\" />
+  </ItemGroup>
+
 </Project>
