--- a/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="UseCases\Drivers\Edit\" />
+    <Folder Include="UseCases\Trips\Assign\" />
   </ItemGroup>
 
 </Project>
