--- a/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.EventBus\DynamicDriving.EventBus.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Drivers\Commands\" />
+    <Folder Include="Outbox\" />
   </ItemGroup>
 
 </Project>
