--- a/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Drivers\" />
     <Folder Include="Behaviors\" />
     <Folder Include="Cities\" />
+    <Folder Include="Drivers\Commands\" />
     <Folder Include="Outbox\" />
     <Folder Include="Trips\Events\" />
   </ItemGroup>
