--- a/BuildingBlocks/DynamicDriving.BuildingBlocks.PerformanceTests/DynamicDriving.BuildingBlocks.PerformanceTests.csproj
+++ b/BuildingBlocks/DynamicDriving.BuildingBlocks.PerformanceTests/DynamicDriving.BuildingBlocks.PerformanceTests.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DynamicDriving.EventBus\DynamicDriving.EventBus.csproj" />
   </ItemGroup>
 
 </Project>
