--- a/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "MongoOptions": {
     "Client": "mongodb://localhost:27017",
-    "Database":  "DriverManagementDB"
-  } 
+    "Database": "DriverManagementDB"
+  },
+  "AllowedOrigin": "*"
 }
