--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -7,6 +7,7 @@
     }
   },
   "ConnectionStrings": {
-      "DefaultConnection": "server=(localdb)\\mssqllocaldb;Initial Catalog=DynamicDriving.TripManagementDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+    "DefaultConnection": "server=(localdb)\\mssqllocaldb;Initial Catalog=DynamicDriving.TripManagementDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "AllowedOrigin":  "*"
 }
