--- a/Contracts/DynamicDriving.Events/DynamicDriving.Events.csproj
+++ b/Contracts/DynamicDriving.Events/DynamicDriving.Events.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Protos\" />
+    <Compile Remove="Protos\**" />
+    <EmbeddedResource Remove="Protos\**" />
+    <None Remove="Protos\**" />
   </ItemGroup>
 
 </Project>
