--- a/Services/Drivers/DynamicDriving.DriverManagement.API.IntegrationTests/DynamicDriving.DriverManagement.API.IntegrationTests.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API.IntegrationTests/DynamicDriving.DriverManagement.API.IntegrationTests.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.3" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
