--- a/Services/Trips/DynamicDriving.TripManagement.API.IntegrationTests/DynamicDriving.TripManagement.API.IntegrationTests.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.API.IntegrationTests/DynamicDriving.TripManagement.API.IntegrationTests.csproj
@@ -31,6 +31,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.3" />
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
