Indetity server with mongo

--- a/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
+++ b/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
@@ -18,4 +18,8 @@
     <Folder Include="Entities\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+  </ItemGroup>
+
 </Project>
