secure Trip management

--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -18,7 +18,8 @@
         ],
         "AllowedScopes": [
           "openid",
-          "profile"
+          "profile",
+          "tripmanagement.fullaccess"
         ],
         "AlwaysIncludeUserClaimsInIdToken":  true
       }
