--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -12,5 +12,20 @@
     "Host": "localhost",
     "Port": 27017
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerSettings": {
+    "ApiScopes": [
+      {
+        "Name": "tripmanagement.fullaccess"
+      }
+    ],
+    "ApiResources": [
+      {
+        "Name": "TripManagement", // this is transformed into the audience in the JWT
+        "Scopes": [
+          "tripmanagement.fullaccess"
+        ]
+      }
+    ]
+  }
 }
