--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -4,11 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information",
-      "Microsoft.AspNetCore.Authorization" :  "Information"
+      "Microsoft.AspNetCore.Authorization": "Information"
     }
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=(localdb)\\mssqllocaldb;Initial Catalog=DynamicDriving.TripManagementDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "AllowedOrigin":  "*"
+  "AllowedOrigin": "*",
+  "IdentitySettings": {
+    "Authority": "https://localhost:7070",
+    "Audience": "TripManagement"
+  }
 }
