--- a/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
+++ b/BuildingBlocks/DynamicDriving.SharedKernel/DynamicDriving.SharedKernel.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
   </ItemGroup>
 
 </Project>
