--- a/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
@@ -9,5 +9,9 @@
     "Client": "mongodb://localhost:27017",
     "Database": "DriverManagementDB"
   },
-  "AllowedOrigin": "*"
+  "AllowedOrigin": "*",
+  "IdentitySettings": {
+    "Authority": "https://localhost:7070",
+    "Audience": "DriverManagement"
+  }
 }
