--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -19,7 +19,8 @@
         "AllowedScopes": [
           "openid",
           "profile",
-          "tripmanagement.fullaccess"
+          "tripmanagement.fullaccess",
+          "drivermanagement.fullaccess"
         ],
         "AlwaysIncludeUserClaimsInIdToken":  true
       }
