--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -17,6 +17,9 @@
     "ApiScopes": [
       {
         "Name": "tripmanagement.fullaccess"
+      },
+      {
+        "Name": "drivermanagement.fullaccess"
       }
     ],
     "ApiResources": [
@@ -24,6 +27,12 @@
         "Name": "TripManagement", // this is transformed into the audience in the JWT
         "Scopes": [
           "tripmanagement.fullaccess"
+        ]
+      },
+      {
+        "Name": "DriverManagement", // this is transformed into the audience in the JWT
+        "Scopes": [
+          "drivermanagement.fullaccess"
         ]
       }
     ]
