secure identity service

--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -21,7 +21,8 @@
           "openid",
           "profile",
           "tripmanagement.fullaccess",
-          "drivermanagement.fullaccess"
+          "drivermanagement.fullaccess",
+          "IdentityServerApi"
         ],
         "AlwaysIncludeUserClaimsInIdToken":  true
       }
