--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -20,6 +20,9 @@
       },
       {
         "Name": "drivermanagement.fullaccess"
+      },
+      {
+        "Name": "IdentityServerApi"
       }
     ],
     "ApiResources": [
