--- a/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
+++ b/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
@@ -5,9 +5,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
+    <UserSecretsId>d021c6d1-c94b-4655-b91c-1c189adfea8c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
