--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -12,6 +12,9 @@
     "Host": "localhost",
     "Port": 27017
   },
+  "IdentitySettings": {
+    "AdminUserEmail" :  "admin@dynamic-driving.com"
+  },
   "AllowedHosts": "*",
   "IdentityServerSettings": {
     "ApiScopes": [
