--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -33,12 +33,18 @@
         "Name": "TripManagement", // this is transformed into the audience in the JWT
         "Scopes": [
           "tripmanagement.fullaccess"
+        ],
+        "UserClaims": [
+          "role"
         ]
       },
       {
         "Name": "DriverManagement", // this is transformed into the audience in the JWT
         "Scopes": [
           "drivermanagement.fullaccess"
+        ],
+        "UserClaims": [
+          "role"
         ]
       }
     ]
