claim based auth

--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -22,7 +22,19 @@
         "Name": "tripmanagement.fullaccess"
       },
       {
+        "Name": "tripmanagement.writeaccess"
+      },
+      {
+        "Name": "tripmanagement.readaccess"
+      },
+      {
         "Name": "drivermanagement.fullaccess"
+      },
+      {
+        "Name": "drivermanagement.writeaccess"
+      },
+      {
+        "Name": "drivermanagement.readaccess"
       },
       {
         "Name": "IdentityServerApi"
@@ -32,7 +44,9 @@
       {
         "Name": "TripManagement", // this is transformed into the audience in the JWT
         "Scopes": [
-          "tripmanagement.fullaccess"
+          "tripmanagement.fullaccess",
+          "tripmanagement.writeaccess",
+          "tripmanagement.readaccess"
         ],
         "UserClaims": [
           "role"
@@ -41,7 +55,9 @@
       {
         "Name": "DriverManagement", // this is transformed into the audience in the JWT
         "Scopes": [
-          "drivermanagement.fullaccess"
+          "drivermanagement.fullaccess",
+          "drivermanagement.writeaccess",
+          "drivermanagement.readaccess"
         ],
         "UserClaims": [
           "role"
