--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -21,6 +21,8 @@
           "openid",
           "profile",
           "tripmanagement.fullaccess",
+          "tripmanagement.writeaccess",
+          "tripmanagement.readaccess",
           "drivermanagement.fullaccess",
           "IdentityServerApi"
         ],
