add initial setup

--- a/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>5bb7d4d3-ccd3-478b-960a-56fe01d313b2</UserSecretsId>
+    <AnalysisMode>AllEnabledByDefault</AnalysisMode>
   </PropertyGroup>
 
   <ItemGroup>
