--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -26,7 +26,28 @@
           "drivermanagement.fullaccess",
           "IdentityServerApi"
         ],
-        "AlwaysIncludeUserClaimsInIdToken":  true
+        "AlwaysIncludeUserClaimsInIdToken": true
+      },
+      {
+        "ClientId": "tripsui",
+        "ClientName": "The trips UI",
+        "AccessTokenLifetime": 120,
+        "AllowedGrantTypes": [
+          "authorization_code"
+        ],
+        "RequireClientSecret": false,
+        "RedirectUris": [
+          "https://localhost:7010/signin-oidc"
+        ],
+        "PostLogoutRedirectUris": [
+          "https://localhost:7010/signout-oidc"
+        ],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "drivermanagement.fullaccess"
+        ],
+        "AlwaysIncludeUserClaimsInIdToken": true
       }
     ]
   }
