UI Auth, 1st part

--- a/Services/Identity/DynamicDriving.Identity.Service/Properties/launchSettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "DynamicDriving.Identity.Service": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      //"launchBrowser": true,
+      //"launchUrl": "swagger",
       "applicationUrl": "https://localhost:7070;http://localhost:5070",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
