--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -31,6 +31,9 @@
       {
         "ClientId": "tripsui",
         "ClientName": "The trips UI",
+        "RequireConsent" :  false,
+        "AllowOfflineAccess": true, // allow access to the API when the user is not present, refresh_token
+        "RequirePkce": true,
         "AccessTokenLifetime": 120,
         "AllowedGrantTypes": [
           "authorization_code"
