--- a/Services/Drivers/DynamicDriving.DriverManagement.API/Properties/launchSettings.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "DynamicDriving.DriverManagement.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      //"launchBrowser": true,
+      //"launchUrl": "swagger",
       "applicationUrl": "https://localhost:7292;http://localhost:5292",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
