--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -48,6 +48,7 @@
         "AllowedScopes": [
           "openid",
           "profile",
+          "email",
           "drivermanagement.fullaccess"
         ],
         "AlwaysIncludeUserClaimsInIdToken": true
