--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -13,7 +13,7 @@
     "Port": 27017
   },
   "IdentitySettings": {
-    "AdminUserEmail" :  "admin@dynamic-driving.com"
+    "AdminUserEmail": "admin@dynamic-driving.com"
   },
   "AllowedHosts": "*",
   "IdentityServerSettings": {
@@ -49,7 +49,9 @@
           "tripmanagement.readaccess"
         ],
         "UserClaims": [
-          "role"
+          "role",
+          "name",
+          "email"
         ]
       },
       {
@@ -60,7 +62,9 @@
           "drivermanagement.readaccess"
         ],
         "UserClaims": [
-          "role"
+          "role",
+          "name",
+          "email"
         ]
       },
       {
@@ -69,7 +73,9 @@
           "IdentityServerApi"
         ],
         "UserClaims": [
-          "role"
+          "role",
+          "name",
+          "email"
         ]
       }
     ]
