--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -6,6 +6,7 @@
       "Microsoft.AspNetCore.Authorization": "Information"
     }
   },
+  "AllowedOrigin" : "http://localhost:3000",
   "IdentityServerSettings": {
     "Clients": [
       {
@@ -24,34 +25,32 @@
           "tripmanagement.writeaccess",
           "tripmanagement.readaccess",
           "drivermanagement.fullaccess",
-          "IdentityServerApi"
+          "IdentityServerApi",
+          "roles"
         ],
         "AlwaysIncludeUserClaimsInIdToken": true
       },
       {
-        "ClientId": "tripsui",
-        "ClientName": "The trips UI",
-        "RequireConsent" :  false,
-        "AllowOfflineAccess": true, // allow access to the API when the user is not present, refresh_token
-        "RequirePkce": true,
-        "AccessTokenLifetime": 120,
+        "ClientId": "frontend",
         "AllowedGrantTypes": [
           "authorization_code"
         ],
         "RequireClientSecret": false,
         "RedirectUris": [
-          "https://localhost:7010/signin-oidc"
-        ],
-        "PostLogoutRedirectUris": [
-          "https://localhost:7010/signout-oidc"
+          "http://localhost:3000/authentication/login-callback"
         ],
         "AllowedScopes": [
           "openid",
           "profile",
           "email",
-          "drivermanagement.fullaccess"
+          "drivermanagement.fullaccess",
+          "IdentityServerApi",
+          "roles"
         ],
-        "AlwaysIncludeUserClaimsInIdToken": true
+        "AlwaysIncludeUserClaimsInIdToken": true,
+        "PostLogoutRedirectUris": [
+          "http://localhost:3000/authentication/logout-callback"
+        ]
       }
     ]
   }
