--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -42,7 +42,7 @@
     ],
     "ApiResources": [
       {
-        "Name": "TripManagement", // this is transformed into the audience in the JWT
+        "Name": "TripManagement",
         "Scopes": [
           "tripmanagement.fullaccess",
           "tripmanagement.writeaccess",
@@ -55,7 +55,7 @@
         ]
       },
       {
-        "Name": "DriverManagement", // this is transformed into the audience in the JWT
+        "Name": "DriverManagement",
         "Scopes": [
           "drivermanagement.fullaccess",
           "drivermanagement.writeaccess",
